--- a/dashboard/src/app/pages/livraison/livraison.component.html
+++ b/dashboard/src/app/pages/livraison/livraison.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <app-page-title title="Devis"></app-page-title>
+    <app-page-title title="Livraison"></app-page-title>
     
     <div class="d-flex flex-column col-sm-12 col-md-4">
         <div class="search-box me-2 mb-2 d-inline-block">
@@ -18,7 +18,7 @@
         <table class="table align-middle table-nowrap dt-responsive nowrap w-100 table-check" id="order-list">
             <thead class="table-light">
                 <tr>
-                    <th class="align-middle">Numéro de Devis</th>
+                    <th class="align-middle">Numéro de livraison</th>
                     <th class="align-middle">Client</th>
                     <th class="align-middle">Prix HT</th>
                     <th class="align-middle">TVA</th>
@@ -29,8 +29,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let reception of devis | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; let i = index">
-                    <td>{{ reception.numDevis }}</td>
+                <tr *ngFor="let reception of livraisons | paginate: { itemsPerPage: itemsPerPage, currentPage: p }; let i = index">
+                    <td>{{ reception.numLivraison }}</td>
                     <td>{{ reception.client?.nom }}</td>
                     <td>{{ reception.priceHt }}</td>
                     <td>{{ reception.tva }}</td>
@@ -42,7 +42,7 @@
                         </a>
                     </td>
                     <td>
-                        <a (click)="onDownloadFile(reception.nomFichier,reception.numDevis)" class="list-group-item" style="cursor: pointer;">
+                        <a (click)="onDownloadFile(reception.nomFichier,reception.numLivraison)" class="list-group-item" style="cursor: pointer;">
                             <i class="bx bx-download"></i>
                         </a>
                     </td>
@@ -59,7 +59,7 @@
                                   ...
                               </button>
                               <ul class="dropdown-menu" [ngClass]="{'show': isDropdownOpen}">
-                                  <li><a class="dropdown-item" (click)="convertToCommande(reception)">Commande</a></li>
+                                  <li><a class="dropdown-item" (click)="convertToFacture(reception)">Facture</a></li>
                               </ul>
                           </div>
 
@@ -79,14 +79,14 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Ajouter un devis</h5>
+            <h5 class="modal-title">Ajouter une livraison</h5>
             <button type="button" class="btn-close" (click)="add?.hide()"></button>
           </div>
           <div class="modal-body">
-            <form [formGroup]="addForm" (ngSubmit)="onAddDevis()">
+            <form [formGroup]="addForm" (ngSubmit)="onAddLivraison()">
               <div class="mb-3">
-                <label for="numDevis" class="form-label">Numéro de devis</label>
-                <input formControlName="numDevis" class="form-control" id="numDevis" />
+                <label for="numLivraison" class="form-label">Numéro de livraison</label>
+                <input formControlName="numLivraison" class="form-control" id="numLivraison" />
               </div>
               <div class="mb-3">
                 <label for="clientId" class="form-label">Client</label>
@@ -137,14 +137,14 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Modifier un devis</h5>
+            <h5 class="modal-title">Modifier une livraison</h5>
             <button type="button" class="btn-close" (click)="edit?.hide()"></button>
           </div>
           <div class="modal-body">
-            <form [formGroup]="editForm" (ngSubmit)="onUpdateDevis()">
+            <form [formGroup]="editForm" (ngSubmit)="onUpdateLivraison()">
               <div class="mb-3">
-                <label for="numDevis" class="form-label">Numéro de devis</label>
-                <input formControlName="numDevis" class="form-control" id="numDevis" />
+                <label for="numLivraison" class="form-label">Numéro de livraison</label>
+                <input formControlName="numLivraison" class="form-control" id="numLivraison" />
               </div>
               <div class="mb-3">
                 <label for="clientId" class="form-label">Client</label>
