--- a/dashboard/src/app/pages/vente/vente.component.html
+++ b/dashboard/src/app/pages/vente/vente.component.html
@@ -14,7 +14,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Bon de commande</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/commande" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Bon de livraison</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/livraison" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Facture</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/facture" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
