gestion de sortie

--- a/dashboard/src/app/pages/vente/vente.component.html
+++ b/dashboard/src/app/pages/vente/vente.component.html
@@ -38,7 +38,7 @@
             <div class="card shadow-sm">
                 <div class="card-body text-center">
                     <h5 class="card-title">Bon de sortie</h5>
-                    <a routerLink="" class="btn btn-primary">Ouvrir</a>
+                    <a routerLink="/sortie" class="btn btn-primary">Ouvrir</a>
                 </div>
             </div>
         </div>
